@@ -211,9 +211,11 @@ public class BspServiceWorker<I extends WritableComparable,
       localitySorter.getPrioritizedLocalInputSplits();
     String reservedInputSplitPath = null;
     Stat reservedStat = null;
+    final Mapper<?, ?, ?, ?>.Context context = getContext();
     while (true) {
       int finishedInputSplits = 0;
       for (int i = 0; i < inputSplitPathList.size(); ++i) {
+        context.progress();
         String tmpInputSplitFinishedPath =
             inputSplitPathList.get(i) + INPUT_SPLIT_FINISHED_NODE;
         reservedStat =
@@ -273,6 +275,7 @@ public class BspServiceWorker<I extends WritableComparable,
       }
       // Wait for either a reservation to go away or a notification that
       // an InputSplit has finished.
+      context.progress();
       getInputSplitsStateChangedEvent().waitMsecs(60 * 1000);
       getInputSplitsStateChangedEvent().reset();
     }
@@ -309,6 +312,7 @@ public class BspServiceWorker<I extends WritableComparable,
     for (Entry<PartitionOwner, Partition<I, V, E, M>> entry :
       inputSplitCache.entrySet()) {
       if (!entry.getValue().getVertices().isEmpty()) {
+        getContext().progress();
         commService.sendPartitionRequest(entry.getKey().getWorkerInfo(),
             entry.getValue());
       }
@@ -474,8 +478,8 @@ public class BspServiceWorker<I extends WritableComparable,
       ++totalVerticesLoaded;
       totalEdgesLoaded += readerVertex.getNumEdges();
 
-      // Update status every half a million vertices
-      if ((totalVerticesLoaded % 500000) == 0) {
+      // Update status every 250k vertices
+      if ((totalVerticesLoaded % 250000) == 0) {
         String status = "readVerticesFromInputSplit: Loaded " +
             totalVerticesLoaded + " vertices and " +
             totalEdgesLoaded + " edges " +
